manifests/network-policies/backend-block-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-block-ingress
  namespace: user1
spec:
  podSelector:
    matchLabels:
      app: timber-backend
  policyTypes:
  - Ingress
