manifests/network-policies/frontend-block-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-block-egress
  namespace: user1
spec:
  podSelector:
    matchLabels:
      app: timber-frontend
  policyTypes:
  - Egress
