manifests/network-policies/frontend-stop-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-stop-egress
  namespace: user1          
spec:
  podSelector:
    matchLabels:
      app: timber-frontend
  policyTypes:
  - Egress
